fix href spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root .prose {
   --tw-prose-bullets: white;
 }
